Security Fix: Remove hardcoded secrets, migrate to Publishable Keys, and cleanup project root

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@
 # Public URL - Safe to expose to the browser
 NEXT_PUBLIC_SUPABASE_URL=https://YOUR_PROJECT_ID.supabase.co
 
-# Anon/Public Key - Safe to expose to the browser
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
+# Publishable Key (replaces Anon Key) - Safe to expose to the browser
+# New keys format: sb_publishable_...
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_your_key_here
 
 # Service Role Key - NEVER expose to the browser! Only for server-side use
 # This key bypasses Row Level Security (RLS) - keep it secret!
@@ -19,12 +20,12 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
 # OAuth Credentials - Required for "Login with Patreon"
 # Client ID needs NEXT_PUBLIC_ prefix to be accessible in browser (for OAuth redirect)
-NEXT_PUBLIC_PATREON_CLIENT_ID=rWvwtrNxh3gLxv4G-y6ec9VRzu9qpokBc0ei9unzC9aRj59Lyc5XTtUSwKlPdZ9G
+NEXT_PUBLIC_PATREON_CLIENT_ID=your_patreon_client_id
 # Client Secret is server-only - NEVER expose to browser!
-PATREON_CLIENT_SECRET=SMuwqUjyFFXC65uZmMjinq63hWQ_JySTqvkEpQrVN8hGvPYqpXJB-KMWe6G4SyTH
+PATREON_CLIENT_SECRET=your_patreon_client_secret
 
 # Webhook Secret - For receiving membership updates
-PATREON_WEBHOOK_SECRET=gPsBMXH1KNLyHP45U6qtFRjFQDCfUQ-m-h2J_vlJbfunVp5twuPIjI7OS_hgkExf
+PATREON_WEBHOOK_SECRET=your_patreon_webhook_secret
 
 # Patreon Tier IDs - Get these from your Patreon campaign settings
 # These are the numeric IDs for each tier level
